tests/pos/simple/03-glob.ts

/*@ a :: posint */
var a = 1;
var b = a + 1;
var c = b;
assert(b === c);
